# quantum-relational-language

./: .dockerignore  .env.example  .gitignore  BUG_FIX_SUMMARY.md  Caddyfile  Dockerfile  IMPLEMENTATION_ROADMAP.md  License  README.md  README_UPDATE_JAN_18_2026.md  STAGE1_COMPLETE.md  STAGE2_PHASE1_COMPLETE.md  STAGE2_PLAN.md  commit.sh  docker-compose.yml  pyproject.toml  requirements.txt
docs/: PHILOSOPHY.md  api-reference.md
examples/: bell_inequality.py  graphix_exploration.py  perceval_hello_world.py  quantum_correlations.py  quickstart.py  teleportation.py
papers/qpl-2026/: from-correlations-to-photons.tex  references.bib
platform/: __init__.py  api.py  cli.py  executor.py  loop.py  providers.py  templates.py
qai/: api.py  cli.py  config.py  executor.py  hardware.py  loop.py  providers.py  store.py  templates.py
qai/static/: index.html
quantum_advisor/: README.md  SUMMARY.md  __init__.py  advisor.py  knowledge_base.json  schema.md
src/: __init__.py
src/qpl/: __init__.py  core.py  measurement.py  tensor_utils.py
src/qpl/compiler/: __init__.py  qiskit_backend.py
src/qpl/examples/: __init__.py  teleportation.py
src/qpl/mbqc/: __init__.py  adaptive_corrections.py  graph_extraction.py  measurement_pattern.py  pattern_generation.py
src/qrl/: __init__.py  causal.py  core.py
src/qrl/backends/: __init__.py
src/qrl/domains/: sensing.py
src/qrl/physics/: __init__.py  bell.py  demo.py  ghz.py
tests/: conftest.py  test_adaptive_corrections.py  test_core.py  test_cross_basis_measurement.py  test_domains_sensing.py  test_graph_extraction.py  test_pattern_generation.py  test_platform_api.py  test_stage1_nqubit.py
training/: README.md
unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
vision/: BELL_DOMAINS_ROADMAP.md  LLM_TRAINING_ROADMAP.md  PLATFORM_ROADMAP.md  QRL_ROADMAP.md  research-note-qrl-causal-models.md
